--- a/website/github.erb
+++ b/website/github.erb
@@ -23,6 +23,9 @@
               <a href="/docs/providers/github/d/ip_ranges.html">github_ip_ranges</a>
             </li>
             <li>
+            <a href="/docs/providers/github/d/member_privileges.html">github_member_privileges</a>
+            </li>
+            <li>
             <a href="/docs/providers/github/d/membership.html">github_membership</a>
             </li>
             <li>
@@ -54,6 +57,9 @@
           </li>
           <li>
             <a href="/docs/providers/github/r/issue_label.html">github_issue_label</a>
+          </li>
+          <li>
+            <a href="/docs/providers/github/r/member_privileges.html">github_member_privileges</a>
           </li>
           <li>
           <a href="/docs/providers/github/r/membership.html">github_membership</a>
